[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/settings/GraphicsContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/settings/AudioContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/settings/LanguageContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/Theme.theme" type="Theme" id=4]
[ext_resource path="res://gui/settings/SettingsContainer.gd" type="Script" id=5]
[ext_resource path="res://assets/suck.wav" type="AudioStream" id=6]





[node name="SettingsContainer" type="PanelContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 538.0
margin_bottom = 176.0
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 534.0
margin_bottom = 134.0
custom_constants/separation = 8

[node name="AudioContainer" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 240.0
margin_bottom = 134.0

[node name="Label" parent="VBoxContainer/HBoxContainer/AudioContainer" index="0"]
margin_right = 240.0

[node name="VBoxContainer" parent="VBoxContainer/HBoxContainer/AudioContainer" index="1"]
margin_right = 240.0
margin_bottom = 134.0

[node name="HBoxContainer" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer" index="0"]
margin_top = 0.0
margin_right = 240.0
margin_bottom = 32.0

[node name="Label" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer" index="0"]
margin_right = 240.0
margin_bottom = 12.0

[node name="MasterVolumeContainer" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer" index="1"]
margin_top = 12.0
margin_right = 240.0
margin_bottom = 32.0

[node name="HBoxContainer2" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer" index="1"]
margin_top = 36.0
margin_right = 240.0
margin_bottom = 68.0

[node name="Label" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer2" index="0"]
margin_right = 240.0
margin_bottom = 12.0

[node name="MusicVolumeContainer" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer2" index="1"]
margin_top = 12.0
margin_right = 240.0
margin_bottom = 32.0

[node name="HBoxContainer3" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer" index="2"]
margin_top = 72.0
margin_right = 240.0
margin_bottom = 104.0

[node name="Label" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3" index="0"]
margin_right = 240.0
margin_bottom = 12.0

[node name="SFXVolumeContainer" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3" index="1"]
margin_top = 12.0
margin_right = 240.0
margin_bottom = 32.0

[node name="MinusButton" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3/SFXVolumeContainer" index="0"]
margin_top = 0.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../../../../../HBoxContainer2/SaveButton")

[node name="VolumeSlider" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3/SFXVolumeContainer" index="1"]
margin_top = 2.0
margin_right = 216.0
margin_bottom = 18.0

[node name="PlusButton" parent="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3/SFXVolumeContainer" index="2"]
margin_left = 220.0
margin_top = 0.0
margin_right = 240.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../../../../../HBoxContainer2/SaveButton")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 248.0
margin_right = 250.0
margin_bottom = 134.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 534.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphicsContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 276.0
margin_bottom = 54.0

[node name="LanguageContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 276.0
margin_bottom = 134.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 534.0
margin_bottom = 168.0
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 115.0
margin_right = 190.0
margin_bottom = 18.0
rect_min_size = Vector2( 60, 0 )
focus_neighbour_top = NodePath("../../HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3/SFXVolumeContainer/MinusButton")
focus_neighbour_right = NodePath("../ControlsButton")
mouse_default_cursor_shape = 2
text = "common_save"

[node name="ControlsButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_right = 332.0
margin_bottom = 18.0
focus_neighbour_left = NodePath("../SaveButton")
focus_neighbour_top = NodePath("../../HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3/SFXVolumeContainer/MinusButton")
focus_neighbour_right = NodePath("../CancelButton")
mouse_default_cursor_shape = 2
text = "settings_change_controls"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 336.0
margin_right = 418.0
margin_bottom = 18.0
rect_min_size = Vector2( 60, 0 )
focus_neighbour_left = NodePath("../ControlsButton")
mouse_default_cursor_shape = 2
text = "common_cancel"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"
[connection signal="visibility_changed" from="." to="." method="_on_SettingsContainer_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_CancelButton_pressed"]

[editable path="VBoxContainer/HBoxContainer/AudioContainer"]

[editable path="VBoxContainer/HBoxContainer/AudioContainer/VBoxContainer/HBoxContainer3/SFXVolumeContainer"]
